# thonny-codemate

./: .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG_v0.1.7.md  CLAUDE.md  DEV_SETUP.md  GITHUB_ACTIONS_SETUP.md  INSTALL_GPU.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.ja.md  README.md  TROUBLESHOOTING.md  pyproject.toml  refactored_ollama_provider.py  run_dev.bat  run_dev.py  run_dev.sh  run_thonny.py  run_thonny.sh  setup_dev.py  test_button_fix.py  test_lm_studio.py  test_openai_context.py  test_openai_context_README.md  test_openai_context_fix.py  todo.md
.github/workflows/: publish.yml  release.yml  test.yml  version-bump.yml
docs/: gguf_conversion_guide.md  raspberry_pi_setup.md
docs_for_ai/: copilot_features_analysis.md  copy_insert_implementation.md  demelopment_memo_from_chatgpt.md  implementation_techniques.md  plugin_analysis.md  project_goal.md  todo.md
tests/: __init__.py  test_edit_mode_handler.py  test_error_handler.py  test_external_providers.py  test_llm_client.py  test_message_virtualization.py  test_model_manager.py  test_performance_monitor.py  test_plugin_integration.py
thonnycontrib/: __init__.py
thonnycontrib/thonny_codemate/: __init__.py  api.py  edit_mode_handler.py  external_providers.py  i18n.py  llm_client.py  model_manager.py  prompts.py
thonnycontrib/thonny_codemate/ui/: chat_view.py  chat_view_html.py  custom_prompt_dialog.py  markdown_renderer.py  settings_dialog.py
thonnycontrib/thonny_codemate/utils/: __init__.py  constants.py  error_messages.py  unified_error_handler.py
thonnycontrib/thonny_local_ollama/: __init__.py  api.py  context_manager.py  error_handler.py  external_providers.py  i18n.py  llm_client.py  message_virtualization.py  model_manager.py  performance_monitor.py
thonnycontrib/thonny_local_ollama/ui/: __init__.py  chat_view.py  chat_view_html.py  custom_prompt_dialog.py  markdown_renderer.py  model_download_dialog.py  settings_dialog.py
thonnycontrib/thonny_local_ollama/utils/: __init__.py  error_handler.py  retry.py
tools/: convert_to_gguf.py
